# thai-yu

./: .gitignore  CLAUDE.md  README.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
android/app/: build.gradle.kts
assets/data/: thai_zh_glosses.json
docs/features/: 0319-features.md  0319-mockup.html  0319-tones.html
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  bootstrap.dart  main.dart
lib/config/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_th.dart  app_th.arb
lib/config/router/: app_router.dart  app_router.g.dart
lib/config/theme/: app_colors.dart  app_text_styles.dart  app_theme.dart
lib/core/env/: env.dart
lib/data/datasources/: analysis_cache.dart  analysis_cache.g.dart  api_key_storage.dart  api_key_storage.g.dart  backend_service.dart  backend_service.g.dart  openai_service.dart  openai_service.g.dart  supabase_client.dart  supabase_client.g.dart  tts_service.dart  tts_service.g.dart
lib/data/models/: analysis_result.dart  analysis_result.freezed.dart  (+9 more)
test/: widget_test.dart
tools/: pyproject.toml
tools/api/: main.py
tools/api/models/: schemas.py
tools/api/routers/: analyze.py  tokenize.py
tools/api/services/: tokenizer.py  tone_analyzer.py
tools/scripts/: build_glosses.py  test_200_words.py  thai_glosses.py  thai_tables.py  validate_glosses.py  verify_with_pythainlp.py  word_overrides.py
tools/tests/: test_analyze.py  test_complex_words.py  test_glosses.py  test_health.py  test_tokenize.py  test_tone_analyzer.py
web/: index.html  manifest.json
(+27 files in other folders)
